--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,7 +5,11 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+            users_in_memory:
+                memory:
+                    users:
+                        admin: { password: '$2y$15$IDAV1JcPgRGx.B2HJ5/LSO2rfNhosfml2pWk.DRN.qUQceFe89aYG', roles: [ 'ROLE_ADMIN', 'ROLE_USER' ] }
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -13,6 +17,11 @@ security:
         main:
             lazy: true
             provider: users_in_memory
+            logout:
+                path: app_logout
+            http_basic:
+                realm: Secured Area
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -23,7 +32,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
