--- a/composer.json
+++ b/composer.json
@@ -4,23 +4,23 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.2.5",
+        "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-intl": "*",
-        "doctrine/annotations": "^2.0",
+        "doctrine/annotations": "^2.0.2",
         "doctrine/doctrine-bundle": "^2.9",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
-        "easycorp/easyadmin-bundle": "^3.5",
+        "easycorp/easyadmin-bundle": "^v4.3.5",
         "symfony/apache-pack": "^1.0",
-        "symfony/console": "5.4.*",
-        "symfony/dotenv": "5.4.*",
+        "symfony/console": "7.3.*",
+        "symfony/dotenv": "7.3.*",
         "symfony/flex": "^1.17|^2",
-        "symfony/framework-bundle": "5.4.*",
+        "symfony/framework-bundle": "7.3.*",
         "symfony/maker-bundle": "^1.48",
-        "symfony/runtime": "5.4.*",
-        "symfony/yaml": "5.4.*"
+        "symfony/runtime": "7.3.*",
+        "symfony/yaml": "7.3.*"
     },
     "config": {
         "allow-plugins": {
@@ -68,7 +68,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.4.*"
+            "require": "7.3.*"
         }
     }
 }
