--- a/.env
+++ b/.env
@@ -24,6 +24,8 @@ APP_SECRET=c05727d2392df821ed2df217f5ff8fe7
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/redirect-uri?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://root:root@127.0.0.1:8889/redirect-uri?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+URL_FRONT="http://redirecturi.gaultierweb.com/"
